changes for responsive

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
           <div class="text-container">
             <p> 
               I am very interested in software development and I have a passion and curiosity to build innovative applications that people will love. 
-              <br>I enjoy solving problems and working with others. 
-              Seeking an internship opportunity, ready to adapt any challenges and a quick learning ability to meet company needs.
+              I enjoy solving problems and working with others. Seeking an internship opportunity, ready to adapt any challenges and a quick learning ability to meet company needs.
             </p>
           </div>
         </div>
