--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <h3>Education</h3>
               <p1>BSc (Hons) In Computer Science</p1>
                 <br><p2>University of Westminster, UK <br>
-                Informatics Institute of Technology, Sri Lanka</p2>
+                Informatics Institute of Technology, SL</p2>
             </div>
           </div>
           <div class="text-container">
