--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
           />
           <p><a href="mailto:rikasilamdeen@gmail.com">rikasilamdeen@gmail.com</a></p>
         </div>
-        <div class="contact-info-container">
+        <!-- <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
           <p><a href="https://www.linkedin.com/in/rikas-ilamdeen/">LinkedIn</a></p>
-        </div>
+        </div> -->
       </div>
     </section>
     <footer>
