--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <img src="./assets/profile-pic.png" alt="Rikas profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <!-- <p class="section__text__p1">Hello, I am</p> -->
         <h1 class="title">Rikas Ilamdeen</h1>
-        <p class="section__text__p2">Computer Science Undergrad</p>
+        <p class="section__text__p2">Computer Science Undergraduate</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
             onclick="window.open('./assets/resume.pdf')"
           >
-            Download CV
+            Resume
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
@@ -76,7 +76,7 @@
       <h1 class="title">About Me</h1>
             <div class="details-container">
               <h3>Education</h3>
-              <p1>BSc (Hons) In Computer Science</p1>
+              <p1>BSc (Hons) Computer Science</p1>
                 <br><p2>University of Westminster, UK <br>
                 Informatics Institute of Technology, SL</p2>
             </div>
@@ -84,8 +84,7 @@
           <div class="text-container">
             <p> 
               I am very interested in software development and I have a passion and curiosity to build innovative applications that people will love. 
-              I enjoy solving problems and working with others. Seeking an internship opportunity, ready to adapt any challenges and a quick learning ability to meet company needs.
-            </p>
+              I enjoy solving problems and working with others. My enthusiasm extends to contributing to open-source projects, where I thrive in collaborative environments and making a positive impact on the software community.
           </div>
         </div>
       </div>
@@ -106,38 +105,38 @@
             <div class="article-container">
               <article>
                 <div>
-                  <h3>HTML5/CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <div>
                   <h3>Java</h3>
-                  <p>Intermediate</p>
+                  <p>JavaFX, Swing, JUnit, Weka, Spring Boot</p>
                 </div>
               </article>
               <article>
                 <div>
                   <h3>Python</h3>
-                  <p>Experienced</p>
+                  <p>Flask, RPi, Pyret</p>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>MySQL</h3>
-                  <p>Intermediate</p>
+                  <h3>SQL</h3>
+                  <p>MySQL, SQLite</p>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>C#/.NET</h3>
-                  <p>Basic</p>
+                  <h3>HTML5/CSS</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>JavaScript</h3>
+                  <!-- <p>Intermediate</p> -->
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>C/C++</h3>
+                  <!-- <p>Basic</p> -->
                 </div>
               </article>
             </div>
