--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="text-container">
             <p> 
               I am very interested in software development and I have a passion and curiosity to build innovative applications that people will love. Writing clean and efficient code.
-              I enjoy solving problems and working with others. My enthusiasm extends to contributing to open-source projects, where I thrive in collaborative environments and making a positive impact on the software community.
+              I enjoy solving problems and working with others. My enthusiasm extends to contributing to open source projects, where I thrive in collaborative environments and making a positive impact on the software community.
           </div>
         </div>
       </div>
