--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <article>
                 <div>
                   <h3>SQL</h3>
-                  <p>MySQL, SQLite</p>
+                  <p>PostgreSQL, MySQL, SQLite</p>
                 </div>
               </article>
               <article>
@@ -135,7 +135,7 @@
               </article>
               <article>
                 <div>
-                  <h3>C/C++</h3>
+                  <h3>React Native</h3>
                   <!-- <p>Basic</p> -->
                 </div>
               </article>
@@ -146,12 +146,12 @@
             <div class="article-container">
               <article>
                 <div>
-                  <h3>Problem-solving</h3>
+                  <h3>Quick learner</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Communication</h3>
+                  <h3>Problem-solving</h3>
                 </div>
               </article>
               <article>
